--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.8.0",
     "three": "^0.170.0",
+    "tinyqueue": "^3.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   },
