--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
-    "@types/three": "^0.167.1",
+    "@types/three": "^0.170.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.8.0",
-    "three": "^0.167.1",
+    "three": "^0.170.0",
+    "tinyqueue": "^3.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "three-mesh-bvh": "^0.7.6"
+    "three-mesh-bvh": "^0.8.3"
   }
 }
