--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
@@ -17,7 +15,6 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.8.0",
-    "gh-pages": "^6.3.0",
     "three": "^0.170.0",
     "tinyqueue": "^3.0.0",
     "typescript": "^5.2.2",
