--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
   "name": "threefiz",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.5.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\""
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
     "@types/three": "^0.170.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^9.8.0",
     "three": "^0.170.0",
     "tinyqueue": "^3.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4"
-  },
-  "dependencies": {
-    "three-mesh-bvh": "^0.8.3"
+    "typescript": "^5.2.2"
   }
 }
